# uv_package_github_workflow

./: README.md
.github/workflows/: release-onefile.yml
example/: .gitignore  README.md  pyproject.toml
example/src/uv_example/: cli.py
example/tests/: test_cli.py
